k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  namespace: static-ns
spec:
  rules:
  - host: axyya.example.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-dev
            port: 
              number: 2000
